@@ -3,8 +3,8 @@ WARNFLAGS=-Wall
 CFLAGS?=-O2 -g ${WARNFLAGS}
 CC?=gcc
 
-powertop: powertop.c config.c process.c misctips.c Makefile powertop.h
-	$(CC) ${CFLAGS}  powertop.c config.c process.c misctips.c -o powertop
+powertop: powertop.c config.c process.c misctips.c bluetooth.c Makefile powertop.h
+	$(CC) ${CFLAGS}  powertop.c config.c process.c misctips.c bluetooth.c -o powertop
 
 install: powertop
 	mkdir -p ${DESTDIR}${BINDIR}
